<resources>
    <string-array name="array">
        <item>
            " . Data Provinsi . "
        </item>


    </string-array>
    <string name="app_name">Kebudayaan Nusantara</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="aceh"> NANGROE ACEH DARUSSALAM</string>
    <string name="aceh2">
        "\t Nama: Daerah Khusus dan Daerah Istimewa Aceh | Pulau: Sumatera | Ibukota: Banda Aceh \n\n"
        "\t Gubernur: drh. H. Irwandi Yusuf M.Sc | Wakil Gubernur: Ir. H. Nova Iriansyah M.T (sejak 5 Juli 2017) \n\n"
        "\t Kode BPS: 11 | Kode ISO: ID-AC | Kode kendaraan: BL \n\n"
        "\t Kode telepon: 0641-0659, 0627, 0629 | Kode pos: 23111-24791 \n\n"
        "\t Luas: 57.365,09 km2 | Populasi: 5.189.466 jiwa | Kepadatan: 90.46 jiwa/km2 \n\n"
        "\t Pembagian administratif: 18 kabupaten dan 5 kota, 276 kecamatan, 6.424 desa/kelurahan \n\n"
        "\t Semboyan: Pancacita (Bahasa Sanskerta); Bahasa Indonesia: "Lima cita-cita" \n\n"
    </string>
    <string name="rumahaceh">
        "Rumah tradisonal suku Aceh dinamakan Rumoh Aceh. Rumah adat ini bertipe rumah panggung dengan 3 bagian utama dan 1 bagian tambahan. Tiga bagian utama dari rumah Aceh yaitu seuramoë keuë (serambi depan), seuramoë teungoh (serambi tengah) dan seuramoë likôt (serambi belakang). Sedangkan 1 bagian tambahannya yaitu rumoh dapu (rumah dapur)."
    </string>
    <string name="senjataaceh">
        "Rencong adalah senjata tradisional suku Aceh, bentuknya menyerupai huruf L, dan bila dilihat lebih dekat bentuknya merupakan kaligrafi tulisan bismillah. Rencong termasuk dalam kategori belati. "
        " Selain rencong, bangsa Aceh juga memiliki beberapa senjata khas lainnya, seperti sikin panyang, peurise awe, peurise teumaga, siwah, geuliwang dan peudeueng."
    </string>
    <string name="makananaceh1">
        "Aceh mempunyai aneka jenis makanan yang khas. Antara lain timphan, gulai bebek, kari kambing yang lezat, Gulai Pliek U dan meuseukat yang langka. "
        "Di samping itu emping melinjo asal kabupaten Pidie yang terkenal gurih, dodol Sabang yang dibuat dengan aneka rasa, ketan durian (boh drien ngon bu leukat), "
        "serta bolu manis asal Peukan Bada, Aceh Besar juga bisa jadi andalan bagi Aceh. Di Pidie Jaya terkenal dengan kue khas Meureudu yaitu adèe. "
        "Sedangkan di kabupaten Aceh Utara lazim kita temukan kuliner khas lainnya yaitu martabak durian yang lezat. "
        </string>
    <string name="makananaceh2">
        "Kuliner Bireuen yang paling terkenal adalah sate matang yang merupakan sate daging sapi atau kambing yang dibakar yang pada awalnya berasal dari kota Matang Glumpang Dua. "
        "Makanan khas Kota Langsa yang sangat terkenal hingga ke seluruh Indonesia adalah Sop Sumsum yaitu berupa sop tulang daging sapi yang berisi sumsum di dalam tulangnya dan tulang daging sapi tersebut telah dipotong untuk dapat dinikmati sumsumnya menggunakan sedotan atau menuangnya langsung ke atas piring. "

    </string>
    <string name="makananaceh4">
        "Berikut Makanan Khas Aceh lainnya: \n"
            "1. Manisan pala \n"
            "2. Sanger \n"
            "3. Pisang Sale \n"
            "4. Kembang loyang \n"
            "5. Lepat \n"
            "6. Rujak Aceh Samalanga \n"
            "7. Keumamah \n"
            "8. Kue Bhoi \n"
            "9. Bohromrom \n"
            "10. Meuseukat \n"

    </string>
    <string name="kalteng"> KALIMANTAN TENGAH</string>
    <string name="kalteng1">
        "\t Nama: Kalimantan Tengah | Pulau: Kalimantan | Ibukota: Palangkaraya \n\n"
        "\t Gubernur: Agustin Teras Narang | Wakil Gubernur: Achmad Diran (sejak 4 Agustus 2010) \n\n"
        "\t Kode BPS: 62 | Kode ISO: ID-KT | Kode kendaraan: KH \n\n"
        "\t Kode telepon: 0513-0539 | Kode pos: 73111-74874 \n\n"
        "\t Luas: 153.564,50 km2 | Populasi: 2.212.089 jiwa | Kepadatan: 14.4 jiwa/km2 \n\n"
        "\t Pembagian administratif: 13 kabupaten dan 1 kota, 149 kecamatan, 1.979 desa/kelurahan \n\n"
        "\t Semboyan: Isen Mulang (Bahasa Sangen); Bahasa Indonesia: "Pantang Mundur" \n\n"
    </string>
    <string name="rumahkalteng">
        "( Rumah Betang (rumah panjang) )"
    </string>
    <string name="rumahkalteng1">
        " \t Rumah adat Kalimantan Tengah dinamakan Rumah Betang, Bentuk rumahnya panjang, "
        "bawah kolongnya digunakan untuk pertenun dan menumbuk padi dan dihuni oleh lebih kurang 20 kepala keluarga. \n"
        " \t Rumah terdiri dari 6 kamar antara lain untuk penyimpanan alat-alat perang, kamar untuk pendidikan gadis, "
        "tempat sesajian, tempat upacara adat dan agama, tempat penginapan dan ruang tamu. "
        "Pada kiri-kanan ujung atap dihiasi tombak sebagai penolak mara bahaya. "
    </string>
    <string name="pakaiankalteng">
        "( Pakaian Adat Kalteng )"
    </string>
    <string name="pakaiankalteng1">
        " \t Pakaian adatnya pria Kalimantan Tengah berupa kepala berhiasankan bulu-bulu enggang, "
        "rompi dan kain-kain yang menutup bagian bawah badan sebatas lutut. "
        "Sebuah tameng kayu hiasan yang khas bersama mandaunya berada di tangan. "
        "Perhiasan yang dipakai berupa kalung-kalung manik dan ikat pinggang. \n"
        " \t Wanitanya memakai baju rompi dan kain (rok pendek), tutup kepala berhiaskan bulu-bulu enggang, "
        "kalung manik, ikat pinggang dan beberapa gelang tangan. "
    </string>
    <string name="tarikalteng">
        "( Tari Tambun dan Bungai )"
    </string>
    <string name="tarikalteng1">
        "a.    Tari Tambun dan Bungai, merupakan sebuah tari yang mengisahkan kepahlawanan Tambun dan "
        "Bungai dalam mengusir musuh yang akan merampas panen rakyat. \n"
        "b.    Tari Balean Dadas, merupakan tarian guna memohon kesembuhan bagi mereka yang sakit. \n"
        "c.    Tari Sangkai Tingang, tari garapan yang memanfaatkan perbendaharaan gerak tari tradisi "
        "ini menggambarkan sikap sekelompok wanita dalam mencintai lingkungan hidupnya. "
        "Mereka berusaha dan berdoa agar burung enggang yang indah itu tetap dilindungi kelestariannya."
    </string>
    <string name="senjatakalteng">
        "( Mandau )"
    </string>
    <string name="senjatakalteng1">
        " \t Di Kalimantan Tengah senjata tradisionalnya adalah mandau. "
        "Bagian hulunya dihiasi ukiran burung tinggang, sejenis burung enggang. \n"
        " \t Menurut kepercayaan mereka, burung tinggang adalah penguasa seluruh alam. "
        "Senjata terkenal lainnya adalah lunjuk sumpit, randu (sejenis tombak) dan perisai."
    </string>
    <string name="makanankalteng">
        "( Umbut Rotan) "
    </string>
    <string name="makanankalteng1">
        " \t Umbut rotan adalah makanan dari Kalimantan Tengah yang terbilang sangat unik. "
        "Kuliner asli dari Suku Dayak ini menjadikan rotan sebagai bahan utama dari menu ini. "
        "Umbut Rotan juga dikenal dengan sebutan nama uwut nang’e."
    </string>
    <string name="makanankalteng2">
        " \t Berikut makanan khas Kalteng lainnya: \n"
        "1.    Juhu Umbut Sawit\n"
        "2.    Wadi\n"
        "3.    Kalumpe\n"
        "4.    Bangamat\n"
    </string>
    <string name="papua"> PAPUA</string>
    <string name="papua1">
        "\t Nama: Daerah khusus Papua | Pulau: Papua | Ibukota: Jayapura \n\n"
        "\t Gubernur: Lukas Enembe | Wakil Gubernur: Klemen Tinal (sejak 9 April 2013) \n\n"
        "\t Kode BPS: 94 | Kode ISO: ID-PA | Kode kendaraan: PA \n\n"
        "\t Kode telepon: 0951-0986, 0901, 0902 | Kode pos: 98111-99974 \n\n"
        "\t Luas: 309.934,40 km2 | Populasi: 2.831.381 jiwa | Kepadatan: 9.14 jiwa/km2 \n\n"
        "\t Pembagian administratif: 28 kabupaten dan 1 kota, 344 kecamatan, 3.575 desa/kelurahan \n\n"
        "\t Semboyan: Karya Swadaya"
    </string>
    <string name="rumahpapua">
        "( Rumah Adat Papua )"
    </string>
    <string name="rumahpapua1">
        " \t Salah satu contoh rumah adat Papua dinamakan Honai. Honai merupakan rumah adat Papua yang dihuni oleh suku Dani. "
        "Rumah tersebut terdiri dari dua lantai yaitu lantai pertama sebagai tempat tidur dan lantai kedua untuk tempat bersantai, "
        "makan dan mengerjakan kerajinan tangan. Pintu Honai amat kecil, tanpa jendela dan atapnya terbuat dari rumput lalang. "
    </string>
    <string name="rumahpapua2">
        "\t Honai terbentuk seperti jamur dengan ketinggian sekitar 4m. Rumah itu luasnya sekitar12-16m. "
        "Dahulu anak laki laki diwajibkan berjaga jaga di Honai dari malam hingga pagi hari, "
        "sedangkan anak perempuan/para gadis boleh tidur di Honai secara berkelompok. "
        "Selain itu terdapat pula rumah yang berfungsi sebagai kuil animisme. Rumah itu berbentuk kerucut tinggi keatas."
    </string>
    <string name="pakaianpapua">
        "( Pakaian Adat Papua )
    </string>
    <string name="pakaianpapua1">
        " \t Pria Papua mengenakan pakaian adat berupa hiasan kepala, kalung yang terbuat dari gigi dan tulang hewan, "
        "kalung dari kerang, ikat pinggang dan sarung yang berumbai rumbai. Tombak beserta, tameng dengan hiasan yang khas ikut menyertai pakaian adatnya. \n"
        " \t Wanitanya memakai kalung dari kerang dan gigi binatang, hiasan pada lengan serta pakaian berumbai rumbai. "
    </string>
    <string name="senjatapapua">
        "( Pisau Belati )"
    </string>
    <string name="senjatapapua1">
        " \t Salah satu senjata tradisional di Papua adalah pisau belati. Senjata ini terbuat dari tulang burung Kasuari "
        "dan bulunya menghiasi hulu belati tersebut. \n"
        " \t Senjata utama penduduk asli Papua lainnya adalah busur dan panah. Busur terbuat dari bumbu dan kayu, "
        "sedangkan tali busur terbuat dari rotan. Anak panahnya terbuat dari bumbu, kayu atau tulang kanguru. "
        "Busur dan panah dipakai untuk berburu atau berperang. "
    </string>
    <string name="taripapua">
        "( Tari Selamat Datang, Papua )"
    </string>
    <string name="taripapua1">
        "a.    Tari Selamat Datang, merupakan tari yang mempertunjukkan kegembiraan hati penduduk dalam menyambut para tamu yang dihormati. \n"
        "b.    Tari Musyoh, merupakan tari suci/keramat dalam upaya mengusir arwah orang meninggal karena kecelakaan. \n"
        "c.    Tari Mbes, merupakan tari garapan yang berfungsi sebagai tari penyambutan tamu. "
        "Yang unik dalam tari ini adalah adanya penggambaran tamu yang digotong dalam posisi berlentang pada sebuah perisai. "
        "Sementara tifa, yang ritmis dinamis ditengah perkikan perkikan khas, merupakan warna tersendiri bagi tari yang diangkat dari daerha Asmat ini. "
    </string>
    <string name="makananpapua">
        " \t Siapa yang tak kenal dengan Papeda? Makanan ini begitu digemari warga sekitar dan bikin wisatawan penasaran karena tampilannya yang kental dan unik. "
        "Makanan ini terbuat dari bahan dasar tepung sagu sehingga tak heran jika teksturnya kental. \n"
        " \t Selain itu cara makannya dengan menggulung makanan menggunakan gata-gata (terbuat dari bambu), "
        "baru hidangan siap disantap. Jangan khawatir, kandungannya baik untuk kesehatan, lho! "
    </string>
</resources>