<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bc"
    tools:context="com.example.nugraha10.kebudayaannusantara.prov.Kalteng">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/kalteng" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/kalteng"
            android:textAlignment="center"
            android:textSize="25sp"
            android:fontFamily="casual"
            android:textColor="@color/putih"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/item"></View>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@drawable/cornerr">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kalimantan Tengah"
                android:textColor="@color/putih"
                android:textSize="20dp"
                android:padding="10dp"
                android:layout_gravity="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/item"></View>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textColor="@color/putih"
                android:text="@string/kalteng1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@drawable/cornerr">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rumah Adat Kalimantan Tengah"
                android:textColor="@color/putih"
                android:textSize="20dp"
                android:padding="10dp"
                android:layout_gravity="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/item"></View>
            <ImageView
                android:layout_width="300dp"
                android:layout_marginTop="10dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:background="@drawable/rumahkalteng"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_gravity="center"
                android:text="@string/rumahkalteng"
                android:textColor="@color/item"
                android:textStyle="italic"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textColor="@color/putih"
                android:text="@string/rumahkalteng1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@drawable/cornerr">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pakaian Adat Kalimantan Tengah"
                android:textColor="@color/putih"
                android:textSize="20dp"
                android:padding="10dp"
                android:layout_gravity="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/item"></View>
            <ImageView
                android:layout_width="190dp"
                android:layout_marginTop="10dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:background="@drawable/pakaiankalteng"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_gravity="center"
                android:text="@string/pakaiankalteng"
                android:textColor="@color/item"
                android:textStyle="italic"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textColor="@color/putih"
                android:text="@string/pakaiankalteng1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@drawable/cornerr">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Senjata Khas Kalimantan Tengah"
                android:textColor="@color/putih"
                android:textSize="20dp"
                android:padding="10dp"
                android:layout_gravity="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/item"></View>
            <ImageView
                android:layout_width="300dp"
                android:layout_marginTop="10dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:background="@drawable/senjatakalteng"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_gravity="center"
                android:text="@string/senjatakalteng"
                android:textColor="@color/item"
                android:textStyle="italic"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textColor="@color/putih"
                android:text="@string/senjatakalteng1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@drawable/cornerr">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Makanan Khas Kalimantan Tengah"
                android:textColor="@color/putih"
                android:textSize="20dp"
                android:padding="10dp"
                android:layout_gravity="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/item"></View>
            <ImageView
                android:layout_width="300dp"
                android:layout_marginTop="10dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:background="@drawable/makanankalteng"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_gravity="center"
                android:text="@string/makanankalteng"
                android:textColor="@color/item"
                android:textStyle="italic"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/putih"
                android:text="@string/makanankalteng1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/putih"
                android:text="@string/makanankalteng2"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@drawable/cornerr">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tarian Khas Kalimantan Tengah"
                android:textColor="@color/putih"
                android:textSize="20dp"
                android:padding="10dp"
                android:layout_gravity="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/item"></View>
            <ImageView
                android:layout_width="140dp"
                android:layout_marginTop="10dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:background="@drawable/tarikalteng"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_gravity="center"
                android:text="@string/tarikalteng"
                android:textColor="@color/item"
                android:textStyle="italic"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/putih"
                android:text="@string/tarikalteng1"
                />

        </LinearLayout>
    </LinearLayout>
</ScrollView>