<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bc"
    tools:context="com.example.nugraha10.kebudayaannusantara.prov.Kalteng">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/papua" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/papua"
            android:textAlignment="center"
            android:textSize="25sp"
            android:fontFamily="casual"
            android:textColor="@color/putih"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/item"></View>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@drawable/cornerr">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Papua"
                android:textColor="@color/putih"
                android:textSize="20dp"
                android:padding="10dp"
                android:layout_gravity="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/item"></View>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textColor="@color/putih"
                android:text="@string/papua1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@drawable/cornerr">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rumah Adat Papua"
                android:textColor="@color/putih"
                android:textSize="20dp"
                android:padding="10dp"
                android:layout_gravity="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/item"></View>
            <ImageView
                android:layout_width="300dp"
                android:layout_marginTop="10dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:background="@drawable/rumahpapua"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_gravity="center"
                android:text="@string/rumahpapua"
                android:textColor="@color/item"
                android:textStyle="italic"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textColor="@color/putih"
                android:text="@string/rumahpapua1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textColor="@color/putih"
                android:text="@string/rumahpapua2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@drawable/cornerr">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pakaian Adat Papua"
                android:textColor="@color/putih"
                android:textSize="20dp"
                android:padding="10dp"
                android:layout_gravity="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/item"></View>
            <ImageView
                android:layout_width="190dp"
                android:layout_marginTop="10dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:background="@drawable/pakaianpapua"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_gravity="center"
                android:text="@string/pakaianpapua"
                android:textColor="@color/item"
                android:textStyle="italic"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textColor="@color/putih"
                android:text="@string/pakaianpapua1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@drawable/cornerr">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Senjata Khas Papua"
                android:textColor="@color/putih"
                android:textSize="20dp"
                android:padding="10dp"
                android:layout_gravity="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/item"></View>
            <ImageView
                android:layout_width="300dp"
                android:layout_marginTop="10dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:background="@drawable/senjatapapua"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_gravity="center"
                android:text="@string/senjatapapua"
                android:textColor="@color/item"
                android:textStyle="italic"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textColor="@color/putih"
                android:text="@string/senjatapapua1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@drawable/cornerr">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Makanan Khas Papua"
                android:textColor="@color/putih"
                android:textSize="20dp"
                android:padding="10dp"
                android:layout_gravity="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/item"></View>
            <ImageView
                android:layout_width="300dp"
                android:layout_marginTop="10dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:background="@drawable/makananpapua"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_gravity="center"
                android:text="( Papeda )"
                android:textColor="@color/item"
                android:textStyle="italic"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/putih"
                android:text="@string/makananpapua"
                />
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@drawable/cornerr">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tarian Khas Papua"
                android:textColor="@color/putih"
                android:textSize="20dp"
                android:padding="10dp"
                android:layout_gravity="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/item"></View>
            <ImageView
                android:layout_width="300dp"
                android:layout_marginTop="10dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:background="@drawable/taripapua"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_gravity="center"
                android:text="@string/taripapua"
                android:textColor="@color/item"
                android:textStyle="italic"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/putih"
                android:text="@string/taripapua1"
                />

        </LinearLayout>
    </LinearLayout>
</ScrollView>